# solar_concentrator

./: .gitignore  .gitmodules  NOTICE.txt  README.md
.github/workflows/: static.yml
docker/: Dockerfile  docker-compose.usb.yml  docker-compose.yml  docker_bash  docker_build_image  docker_connect  docker_disconnect  docker_down  docker_help.txt  docker_kdevelop  docker_ls  docker_up  docker_up_with_usb  give_my_files  print_and_run
electronics/: README.md
electronics/supervisor/: README.md  supervisor.lpp
mechanics/: README.md  animated_solar_panel.scad  assembly.scad  big_bracket.scad  bolt_and_nut.scad  flat_profile.scad  left_hinge.scad  motor.scad  motor_block.scad  panel.scad  panel_board.scad  panel_frame.scad  panel_horizontal_axis.scad  panel_vertical_axis.scad  pulley.scad  small_bracket.scad  small_hinge.scad  solar_panel.scad  square_tube.scad  stand.scad  stand_back_board.scad  stand_front_board.scad  stand_vertical_axis.scad  temp.scad  truncate.scad
mechanics/web_viewer/: index.html  motor_block.stl  o3dv.min.js  panel_frame.stl  panel_vertical_axis.stl  start_local_server.sh  temp.stl  view_3d.html
software/capture/: capture.py
software/motors_controller/: README.md  command_buffer.ino  command_parser.ino  commands.ino  measure_buffer.ino  measure_sampling.ino  motors_build  motors_controller.ino  motors_controller.kdev4  motors_upload  send_commands.py  send_commands_2.py
software/remote_tracking/: motors_direction.py  state.py  supervisor.py  tracking.py
software/simulator/: README.md
software/supervisor_controller/: .clang-format  .cmake-format.yaml  CMakeLists.txt  esp32_build_all  esp32_configure_cmake  esp32_flash_usb  esp32_menuconfig  format_all_sources  sdkconfig.defaults
software/supervisor_controller/components/camera/: CMakeLists.txt  camera.c  camera.cpp  image_conversion.cpp
software/supervisor_controller/components/camera/include/: camera.h  camera.hpp  image_conversion.hpp
software/supervisor_controller/components/capstone_detector/: identify.c
software/supervisor_controller/components/image/: CMakeLists.txt  README.md
software/supervisor_controller/components/image/include/: image.hpp
software/supervisor_controller/components/image_processing/: image_processing.cpp
software/supervisor_controller/components/motors/: CMakeLists.txt  README.md  motors.cpp  motors_hw.cpp  motors_hw.hpp  motors_logic.cpp  motors_logic.hpp  motors_state_machine.cpp  motors_state_machine.hpp
software/supervisor_controller/components/motors/doc/: motors_chart.py  motors_state_machine_chart.py
software/supervisor_controller/components/motors/include/: motors.hpp  motors_direction.hpp  motors_types.hpp  panel.hpp
software/supervisor_controller/components/motors/tests_on_host/: CMakeLists.txt  motors_state_machine_test.cpp
software/supervisor_controller/components/sun_tracker/: CMakeLists.txt  README.md  sun_tracker.cpp  sun_tracker_detection_result.hpp  sun_tracker_logic.cpp  sun_tracker_logic.hpp  sun_tracker_logic_result.hpp  sun_tracker_state_machine.cpp  sun_tracker_state_machine.hpp
software/supervisor_controller/components/sun_tracker/doc/: sun_tracker_state_machine_chart.py
software/supervisor_controller/components/sun_tracker/include/: sun_tracker.hpp  sun_tracker_callbacks.hpp
software/supervisor_controller/components/sun_tracker/tests_on_host/: CMakeLists.txt  sun_tracker_logic_test.cpp  sun_tracker_state_machine_test.cpp
software/supervisor_controller/components/supervisor/: CMakeLists.txt  README.md  supervisor.cpp  supervisor_state_machine.cpp  supervisor_state_machine.hpp
software/supervisor_controller/components/supervisor/doc/: supervisor_state_machine_chart.py
software/supervisor_controller/components/supervisor/include/: supervisor.hpp
software/supervisor_controller/components/target_detector/: CMakeLists.txt  README.md  target_detector.cpp
software/supervisor_controller/components/target_detector/capstone_detector/: CMakeLists.txt  quirc.h
software/supervisor_controller/components/target_detector/include/: target_detector.hpp
software/supervisor_controller/components/target_detector/tests_on_host/: CMakeLists.txt  target_detector_test.cpp
software/supervisor_controller/components/web_custom/: CMakeLists.txt  app_httpd.cpp  app_wifi.c  app_wifi.h  web_log.cpp  web_log.hpp
software/supervisor_controller/components/web_custom/www/: index_ov2640.html
software/supervisor_controller/components/web_interface/: README.md  app_httpd.cpp  web_log.cpp  web_log.hpp
software/supervisor_controller/main/: CMakeLists.txt  Kconfig  app_main.cpp
software/supervisor_controller/tests_on_host/mini_mock/: README.md
software/supervisor_controller/tests_on_host/stub/: esp_log.h
sun_follower_panel/motors_controller/: command_parser.ino  commands.ino  measure_buffer.ino  measure_sampling.ino  motors_controller.ino  send_commands.py  send_commands_2.py
sun_follower_panel/panel_controller/: CMakeLists.txt  panel_controller.kdev4  sdkconfig
sun_followers_supervisor/supervisor/: create_animation.sh  drawing.py  motors_direction.py  panel_web_access.py  state.py  supervisor  supervisor.kdev4  supervisor.py  tracking.py  tracking2.py  tracking3.py  user_interface.py
supervisor/motors_controller/: send_commands.py  send_commands_2.py
supervisor/remote_tracking/: panel_web_access.py  remote_tracking.kdev4  save_images.py  supervisor.py  tracking3.py  user_interface.py
supervisor/supervisor_controller/components/motors/tests_on_host/: CMakeLists.txt
supervisor/supervisor_controller/components/web_custom/: CMakeLists.txt  Kconfig  app_httpd.cpp  app_wifi.c
supervisor/supervisor_controller/components/web_custom/www/: index_ov2640.html
temp/quirc/: CMakeLists.txt  quirc.kdev4
temp/quirc_02/: CMakeLists.txt  quirc_02.kdev4
temp/quirc_02/.kdev4/: quirc_02.kdev4
temp/quirc_02/lib/: identify.c  quirc.c
temp/quirc_02/tests/: dbgutil.c  dbgutil.h  qrtest.c
test_python/: display_esp_image.py  play_images.py  target_tracking.py  test_cv.py  test_dates.py  test_image.py  test_python.kdev4
(+120 files in other folders)
